Added music command :) Removed deleteLast command :(